--- a/src/app/pages/registro/registro.page.html
+++ b/src/app/pages/registro/registro.page.html
@@ -12,6 +12,11 @@
     </ion-item>
 
     <ion-item>
+      <ion-label position="floating">Nombre de Usuario</ion-label>
+      <ion-input type="text" [(ngModel)]="nombreUsuario"></ion-input>
+    </ion-item>
+
+    <ion-item>
       <ion-label position="floating">Contraseña</ion-label>
       <ion-input type="password" [(ngModel)]="clave"></ion-input>
     </ion-item>
